[gd_scene load_steps=2 format=3 uid="uid://dwv2k8m1n3qyp"]

[ext_resource type="Script" path="res://scripts/ui/DailyStats.gd" id="1_stats"]

[node name="DailyStats" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_stats")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.07, 0.1, 0.95)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -180.0
offset_right = 250.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelBG" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.13, 0.18, 1)

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.98, 0.85, 0.6, 1)
theme_override_font_sizes/font_size = 20
text = "Day 1 Summary"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="StatsGrid" type="GridContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 8
columns = 2

[node name="EarningsLabel" type="Label" parent="Panel/VBox/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.75, 1)
text = "Coins Earned:"

[node name="EarningsValue" type="Label" parent="Panel/VBox/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.4, 1)
text = "0"

[node name="SpentLabel" type="Label" parent="Panel/VBox/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.75, 1)
text = "Coins Spent:"

[node name="SpentValue" type="Label" parent="Panel/VBox/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.7, 0.6, 1)
text = "0"

[node name="PPLabel" type="Label" parent="Panel/VBox/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.75, 1)
text = "Progress Gained:"

[node name="PPValue" type="Label" parent="Panel/VBox/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.9, 0.7, 1)
text = "0 PP"

[node name="HoursWorkedLabel" type="Label" parent="Panel/VBox/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.75, 1)
text = "Hours Worked:"

[node name="HoursWorkedValue" type="Label" parent="Panel/VBox/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.85, 0.9, 1)
text = "0"

[node name="MealsLabel" type="Label" parent="Panel/VBox/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.75, 1)
text = "Meals Eaten:"

[node name="MealsValue" type="Label" parent="Panel/VBox/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.7, 1)
text = "0"

[node name="Separator2" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="PositionLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.85, 0.9, 1)
text = "Current Position: App Suggester (Lv1)"
horizontal_alignment = 1

[node name="LivingLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.8, 0.85, 1)
text = "Living: Park Bench"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContinueBtn" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.95, 0.9, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "Continue"

